# MCQAutoGrader

./: LICENSE  README.md  pyproject.toml
configurations/: v1.json  v2.json  v3.json  v4.json
mcqautograder/: autograder.py  multiversion_autograder.py
samples/: students_list.csv
