[tool.poetry]
name = "mcqautograder"
version = "0.1.0"
description = ""
authors = ["Gayashan Amarasinghe <gayashan.amarasinghe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
